build/v1_service_kong-kong-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "3.7"
    helm.sh/chart: kong-2.44.0
  name: kong-kong-manager
  namespace: kong
spec:
  ports:
  - name: kong-manager
    port: 8002
    protocol: TCP
    targetPort: 8002
  - name: kong-manager-tls
    port: 8445
    protocol: TCP
    targetPort: 8445
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: kong
  type: NodePort
