build/v1_service_kong-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "3.7"
    enable-metrics: "true"
    helm.sh/chart: kong-2.44.0
  name: kong-kong-proxy
  namespace: kong
spec:
  ports:
  - name: kong-proxy
    port: 80
    protocol: TCP
    targetPort: 8000
  - name: kong-proxy-tls
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: kong
  type: LoadBalancer
