build/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_kong-kong-validations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: kong
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kong
    app.kubernetes.io/version: "3.7"
    helm.sh/chart: kong-2.44.0
  name: kong-kong-validations
  namespace: kong
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUx6TjZZcW8xRTZVRDJ4b1NYTndiREV3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05NalF4TWpBek1qSXdPVFF6V2hjTgpNelF4TWpBeE1qSXdPVFF6V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFLdXlsTk0yM3Nsbzlxc1ZmWXUrdUdydndvSnMKcmtkNjFIelBDbmpBZ3Q4RTNVUE1ISFJnUGVucVRoNmZKWDdKWkkyQXp6ZnZsZUpDNjhHSlF0dWhPZURNejBnYQpsZkNxaGh1cUg5MF [...]
    service:
      name: kong-kong-validation-webhook
      namespace: kong
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: secrets.credentials.validation.ingress-controller.konghq.com
  objectSelector:
    matchExpressions:
    - key: konghq.com/credential
      operator: Exists
    - key: konghq.com/credential
      operator: NotIn
      values:
      - konnect
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - secrets
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUx6TjZZcW8xRTZVRDJ4b1NYTndiREV3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05NalF4TWpBek1qSXdPVFF6V2hjTgpNelF4TWpBeE1qSXdPVFF6V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFLdXlsTk0yM3Nsbzlxc1ZmWXUrdUdydndvSnMKcmtkNjFIelBDbmpBZ3Q4RTNVUE1ISFJnUGVucVRoNmZKWDdKWkkyQXp6ZnZsZUpDNjhHSlF0dWhPZURNejBnYQpsZkNxaGh1cUg5MF [...]
    service:
      name: kong-kong-validation-webhook
      namespace: kong
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: secrets.plugins.validation.ingress-controller.konghq.com
  objectSelector:
    matchExpressions:
    - key: owner
      operator: NotIn
      values:
      - helm
    - key: konghq.com/credential
      operator: NotIn
      values:
      - konnect
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - secrets
  sideEffects: None
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUx6TjZZcW8xRTZVRDJ4b1NYTndiREV3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyOXVaeTFoWkcxcGMzTnBiMjR0WTJFd0hoY05NalF4TWpBek1qSXdPVFF6V2hjTgpNelF4TWpBeE1qSXdPVFF6V2pBY01Sb3dHQVlEVlFRREV4RnJiMjVuTFdGa2JXbHpjMmx2YmkxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFLdXlsTk0yM3Nsbzlxc1ZmWXUrdUdydndvSnMKcmtkNjFIelBDbmpBZ3Q4RTNVUE1ISFJnUGVucVRoNmZKWDdKWkkyQXp6ZnZsZUpDNjhHSlF0dWhPZURNejBnYQpsZkNxaGh1cUg5MF [...]
    service:
      name: kong-kong-validation-webhook
      namespace: kong
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: validations.kong.konghq.com
  objectSelector:
    matchExpressions:
    - key: owner
      operator: NotIn
      values:
      - helm
  rules:
  - apiGroups:
    - configuration.konghq.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - kongconsumers
    - kongplugins
    - kongclusterplugins
    - kongingresses
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - services
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
  - apiGroups:
    - gateway.networking.k8s.io
    apiVersions:
    - v1alpha2
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gateways
    - httproutes
  sideEffects: None
